<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/stand_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stand_layout"
            android:lines="2"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/item_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stand_layout"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/app_normal_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name"
            android:text="@string/value"
             />

        <TextView
            android:id="@+id/item_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/app_normal_text"
            app:layout_constraintBottom_toBottomOf="@+id/item_state"
            app:layout_constraintStart_toEndOf="@+id/item_state"
            app:layout_constraintTop_toTopOf="@+id/item_state"
            tools:text="@string/empty"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>